<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sell_info">

    <EditText
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/item_name"
        app:layout_constraintBottom_toTopOf="@+id/item_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/item_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/item_detail"
        android:inputType="text|textImeMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/item_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="192dp"
        android:ems="10"
        android:hint="@string/item_price"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/create_add"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:onClick="create_add"
        android:text="@string/create_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/image_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick image"
        app:layout_constraintBottom_toTopOf="@+id/create_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_price" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="2dp"
        android:paddingTop="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_picker"
        app:layout_constraintTop_toTopOf="@+id/image_picker" />
</androidx.constraintlayout.widget.ConstraintLayout>